# anitube-website-api

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  build.sh  db.sqlite3  docker-compose.yaml  mypy.ini  pyproject.toml  pyvenv.cfg  render.yaml  requirements.txt
authentication/: admin.py  apps.py  urls.py  views.py
backend/: backends.py  settings.py  urls.py  views.py
backend/backend/: settings.py
register/: admin.py  models.py  serializers.py  urls.py  views.py
register/migrations/: 0001_initial.py
register/templates/: home.html
