[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''

[tool.pylint.MASTER]
load-plugins = "pylint_django"
django-settings-module = "src.settings"

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = "REQUEST,acl_users,aq_parent,objects,DoesNotExist,id,pk,_meta,base_fields,context"

[tool.poetry]
name = "anitube-website-api"
version = "0.1.0"
description = ""
authors = ["Ayoub Anjaimi <aanjaimi@student.1337.ma>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
python-dotenv = "^1.0.0"
poetry-plugin-export = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.5.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
